[gd_scene load_steps=8 format=3 uid="uid://bixelggg0syjh"]

[ext_resource type="Theme" uid="uid://bwlv31lb5fajo" path="res://Assets/Themes/flappy_bird_theme.tres" id="1_mw3rn"]
[ext_resource type="Script" path="res://Scripts/UI.gd" id="2_r1q70"]

[sub_resource type="Animation" id="Animation_eyf4s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 661)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rviq5"]
resource_name = "fade_in_welcome_title"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_574bc"]
resource_name = "fade_out_score"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_31yaj"]
resource_name = "jump_in_game_over"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label3:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1, 661), Vector2(-1, 160), Vector2(-1, 80), Vector2(-1, 100)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e6brr"]
_data = {
"RESET": SubResource("Animation_eyf4s"),
"fade_in_welcome_title": SubResource("Animation_rviq5"),
"fade_out_score": SubResource("Animation_574bc"),
"jump_in_game_over": SubResource("Animation_31yaj")
}

[node name="Control" type="Control" groups=["UI"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mw3rn")
script = ExtResource("2_r1q70")

[node name="Label" type="Label" parent="."]
top_level = true
z_index = 5
z_as_relative = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0709877
anchor_right = 1.0
anchor_bottom = 0.0709877
offset_bottom = 101.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -77.5
offset_bottom = 77.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 75
text = "FLAPPY BIRD
PRESS UP TO START"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
top_level = true
z_index = 5
y_sort_enabled = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1.0
offset_top = 337.0
offset_right = -1.0
offset_bottom = 737.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = -15
theme_override_font_sizes/font_size = 70
text = "GAME OVER!

SCORE:
 
HIGHEST SCORE:

TO RESTART PRESS UP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e6brr")
}
autoplay = "fade_in_welcome_title"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
